--- a/index.html
+++ b/index.html
@@ -1,9 +1,46 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title></title>
+    <title>Example 01.01 - Basic skeleton</title>
+    <script type="text/javascript" src="lib/three/three.min.js">
+    </script>
+    <script type="text/javascript" src="lib/jquery/jquery-1.11.1.min.js"> </script>
+        <script type="text/javascript" src="js/app.js"> </script>
+
+
+    <style>
+        body{
+            /* set margin to 0 and overflow to hidden,
+            to use the complete page */
+            margin: 0;
+            overflow: hidden;
+        }
+        #canvas {
+            /*background-color: #000;*/
+            width: 200px;
+            height: 200px;
+            border: 1px solid black;
+            margin: 100px;
+            padding: 0px;
+            position: static; /* fixed or static */
+            top: 100px;
+            left: 100px;
+        }
+    </style>
+
 </head>
 <body>
+<!--Div which will hold the Output -->
+<!--<div id="WebGL-output">
+</div>-->
+<div id="canvas">
 
+<!--Javascript code that runs our Three.js examples -->
+<script type="text/javascript">
+    // once everything is loaded, we run our Three.js stuff.
+    $(function () {
+        // here we'll put the Three.js stuff
+    });
+</script>
 </body>
 </html>
